// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user component addNotification subscription for first notification 1`] = `
Object {
  "data": Object {
    "addNotification": Object {
      "message": "first notification",
      "user_id": "id_fake",
    },
  },
  "extensions": Object {
    "operation": null,
  },
}
`;

exports[`user component addNotification subscription for second notification 1`] = `
Object {
  "data": Object {
    "addNotification": Object {
      "message": "second notification",
      "user_id": "id_fake",
    },
  },
  "extensions": Object {
    "operation": null,
  },
}
`;

exports[`user component getAllNotifications query 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "first notification",
        "user_id": "id_fake",
      },
      Object {
        "message": "second notification",
        "user_id": "id_fake",
      },
    ],
  },
  "extensions": Object {
    "operation": null,
  },
}
`;
